# easymo

./: .dockerignore  .env  .env.cloudflare.template  .env.example  .env.netlify.template  .gcloudignore  .git-commit-message.txt  .git-commit-mobility-fix.txt  .gitignore  .npmrc  .prettierignore  .staging_plan.txt  ACTION_PLAN.md  ACTUAL_DEPLOYMENT_STATUS.md  ACTUAL_IMPLEMENTATION_STATUS.md  ADD_MISSING_SECRET.sh  ADD_ONLY_RULES.md  ADMIN_CLOUDRUN_DEPLOYMENT_READY.md  ADMIN_DESKTOP_PRODUCTION_PLAN.md  ADMIN_LOGIN_FIXED_SUMMARY.md  AGENTS_FINAL_STATUS_REPORT.md  AGENTS_IMPLEMENTATION_PHASE1_REPORT.md  AGENTS_IMPLEMENTATION_PROGRESS.md  AGENTS_IMPLEMENTATION_STATUS.md  AGENTS_INDEX.md  AGENTS_PHASE1_CHECKLIST.md  AGENTS_QUICK_REFERENCE.md  AGENTS_REVIEW_SUMMARY.md  AGENT_DATABASE_FIXES_DEPLOYED.md  AGENT_DUPLICATES_DELETED.md  AGENT_ERROR_HANDLING_COMPLETE.md  AGENT_IMPLEMENTATION_PLAN.md  AGENT_INTEGRATION_GUIDE.md  AGENT_REGISTRY_UPDATE_COMPLETE.md  AI_AGENTS_ACTIVATION_COMPLETE.md  AI_AGENTS_COMPLETE_STATUS.md  AI_AGENTS_COMPREHENSIVE_DEEP_REVIEW_2025-11-27.md  AI_AGENTS_DATABASE_INTEGRATION_COMPLETE.md  AI_AGENTS_DEEP_REVIEW_COMPREHENSIVE.md  AI_AGENTS_DEEP_REVIEW_COMPREHENSIVE_FINAL.md  (+1459 more)
.ci/: INTEGRATION_REPORT.md  active_ahead.txt  active_non_codex.txt  ahead_behind.txt  branch_protection_payload.json  branches.txt  candidate_branches.txt  dependency-baseline.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  copilot-instructions.md  pull_request_template.md
.husky/: pre-commit
admin-app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
admin-app/src-tauri/src/: commands.rs  deep_links.rs  files.rs  lib.rs  menu.rs  shortcuts.rs  windows.rs
client-pwa/src-tauri/: Cargo.toml  tauri.conf.json
client-pwa/src-tauri/src/: lib.rs  main.rs
config/: otel.js  (+9 more)
(+9113 files in other folders)
