[package]
name = "easymo-admin"
version = "1.0.0"
description = "EasyMO Admin Desktop Application"
authors = ["EasyMO Platform"]
license = "MIT"
repository = "https://github.com/ikanisa/easymo"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[features]
default = []
# devtools feature removed for production security
# devtools = ["tauri/devtools"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
